# qrbot_gen3

./: Makefile  README.md  pyproject.toml
qrbot_gen3/: .env  __main__.py  bot.py  config.py  dispatcher.py  logger.py  logging.py
qrbot_gen3/keyboards/: keyboards.py  start_keyboard.py
qrbot_gen3/misc/: qr_generator.py
qrbot_gen3/routers/: __init__.py  callback_answer.py  create_qr.py  start.py
qrbot_gen3/types/: __init__.py  qr_code.py  user_message.py
